Closed Bug 872373 Opened 12 years ago Closed 12 years ago

B2G MMS: sendMMS(...) fails to create a proper thread ID for send/sending event.

Categories

(Core :: DOM: Device Interfaces, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla24
blocking-b2g leo+
Tracking Status
firefox22 --- wontfix
firefox23 --- wontfix
firefox24 --- fixed
b2g18 --- fixed
b2g18-v1.0.0 --- wontfix
b2g18-v1.0.1 --- wontfix

People

(Reporter: airpingu, Assigned: airpingu)

References

Details

(Whiteboard: [fixed-in-birch])

Attachments

(1 file)

Thanks rwaldron for catching this. This one blocks Gaia sending MMS and assigning the sent MMS to the right thread. It's absolutely an leo+ and we need to land it ASAP.
Attached patch PatchSplinter Review
Attachment #749649 - Flags: review?(vyang)
Verified....It works.
Verified by replacing below code to smil.js https://gist.github.com/rwldrn/b2aaf04f07c1990e8037 Can send/receive "This is a test from FFOS/Messaging". (In reply to Chia-hung Tai [:ctai :ctai_mozilla :cht] from comment #2) > Verified....It works.
Blocks: 868679
Blocks: 850127
Attachment #749649 - Flags: review?(vyang) → review+
Whiteboard: [NO_UPLIFT] → [NO_UPLIFT] [fixed-in-birch]
Btw, thanks Chia-hung for the verification!
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Whiteboard: [NO_UPLIFT] [fixed-in-birch] → [NO_UPLIFT][fixed-in-birch]
Target Milestone: --- → mozilla24
Hi Anshul, need your check to remove the [NO_UPLIFT] tag. This one is urgent to land to meet our MMS deadline. Thanks!
Flags: needinfo?(anshulj)
Hi Dietrich, could you please give this bug leo+? This one blocks us using thread ID to search messages. Thanks!
Flags: needinfo?(dietrich)
blocking-b2g: leo? → leo+
Removing NO_UPLIFT *only* because we must have MMS landed in v1-train immediately. We still request to be added as reviewers for all RIL interface changes before landing in birch going forward
Flags: needinfo?(anshulj)
Whiteboard: [NO_UPLIFT][fixed-in-birch] → [fixed-in-birch]
Flags: needinfo?(dietrich)
Flags: in-moztrap-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: