Bug 872373 - B2G MMS: sendMMS(...) fails to create a proper thread ID for send/sending event. r=vicamo a=leo+